--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omkumar's Personal Site</title>
+
+<link rel="stylesheet" href="CSS/styles.css">
+
 </head>
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="Capture2.PNG" alt="Omkumar photo" 
+            <td><img src="photovisi-download.jpg" alt="Omkumar photo" 
                 style="height: 300px; width: 250px; "></td>
             <td><h1>Omkumar Dhanorkar</h1>
                 <p> <i>Student at <strong> <a href="https://vjti.ac.in/">VJTI</a> </strong>.</i></p>
-                <p>I am iOS and web developer. I love coffe.</p></td>
+                <p>I am iOS and web developer. I love coffee.</p></td>
         </tr>
     </table>
     
